Fix help command, links to source code properly again